course controller , tag controller  and thumbnail uploader function created today

--- a/server/.env
+++ b/server/.env
@@ -5,6 +5,7 @@ PORT = 4000
 API_KEY = 912958821163342
 API_SECRET = yGfYdBPbbgrlIeKUGTK3QnnW2us
 NAME = dwoigy8ot
+FOLDER_NAME = StudyNotion
 
 
 MAIL_HOST = smtp.gmail.com
