all controller are done

--- a/server/.env
+++ b/server/.env
@@ -1,18 +1,22 @@
-MONGO_URL = mongodb://127.0.0.1:27017/StudyNotion
+MONGO_URL = "mongodb://127.0.0.1:27017/StudyNotion"
 PORT = 4000
 
 
 API_KEY = 912958821163342
 API_SECRET = yGfYdBPbbgrlIeKUGTK3QnnW2us
 NAME = dwoigy8ot
-FOLDER_NAME = StudyNotion
+FOLDER_NAME = "StudyNotion"
 
 
-MAIL_HOST = smtp.gmail.com
-MAIL_USER = umershaikh8806@gmail.com
-MAIL_PASS  = wrkjdnfjweokrdrk
+EMAIL_HOST = "smtp.gmail.com"
+EMAIL_USER = "umershaikh8806@gmail.com"
+EMAIL_PASS  = "wrkjdnfjweokrdrk"
 
 
-SECRET_KEY = UMER78
+SECRET_KEY = "UMER78"
+
+
+RAZORPAY_ID = rzp_test_F1Wpzh7FNaWYKO
+RAZOR_KEY_SECRET = 3zfUSRjH0KQYh60v37OQpwYo
 
 
