--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^3.0.1",
     "otp-generator": "^4.0.1",
-    "razorpay": "^2.9.1"
+    "razorpay": "^2.9.1",
+    "uuid": "^9.0.0"
   }
 }
