--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "concurrently": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -18,8 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "cd server && npm run dev",
-    "dev": "concurrently --kill-others \"npm run start\" \"npm run server\""
-
+    "dev": "concurrently -n \"client , server\" -c \"bgBlue,bgYellow\" \"npm run start\" \"npm run server\""
   },
   "eslintConfig": {
     "extends": [
