--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-otp-input": "^3.0.4",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-super-responsive-table": "^5.2.1",
     "react-type-animation": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
