contact us page done

--- a/server/.env
+++ b/server/.env
@@ -9,8 +9,8 @@ FOLDER_NAME = "StudyNotion"
 
 
 EMAIL_HOST = "smtp.gmail.com"
-EMAIL_USER = "umershaikh8806@gmail.com"
-EMAIL_PASS  = "wrkjdnfjweokrdrk"
+EMAIL_USER = "studynotioneducation@gmail.com"
+EMAIL_PASS  = "zkonpevbsckflgzk"
 
 
 SECRET_KEY = "UMER78"
