Added Code Splitting to enhance performance

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGO_URL = "mongodb://127.0.0.1:27017/StudyNotion"
+MONGO_URL = "mongodb+srv://umershaikh8805:oPzv18L8OGw19MS0@cluster0.fxntdxa.mongodb.net/Studynotion?retryWrites=true&w=majority"
 PORT = 4000
 
 
