fixed profile img and dashboard links

--- a/.env
+++ b/.env
@@ -8,4 +8,5 @@ REACT_APP_STUDENT = Student
 
 
 
-REACT_APP_BASE_URL = https://study-notion-backend-kilr.onrender.com/api/vi
+REACT_APP_BASE_URL =  http://127.0.0.1:4000/api/vi
+https://study-notion-backend-kilr.onrender.com/api/vi
