Payment : Rozorpay payment is live

--- a/server/.env
+++ b/server/.env
@@ -16,7 +16,7 @@ EMAIL_PASS  = "zkonpevbsckflgzk"
 SECRET_KEY = "UMER78"
 
 
-RAZORPAY_ID = rzp_test_F1Wpzh7FNaWYKO
-RAZOR_KEY_SECRET = 3zfUSRjH0KQYh60v37OQpwYo
+RAZORPAY_ID = rzp_live_faIEGiiz72Il3p
+RAZOR_KEY_SECRET = gFd52tDMDMeOXNAok07z2Ii1
 
 USER = Instructor
