--- a/lib/frontend/package.json
+++ b/lib/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@videojs/http-streaming": "^3.17.2",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "chart.js": "^4.4.0",
@@ -33,6 +34,7 @@
     "react-type-animation": "^3.1.0",
     "swiper": "^10.2.0",
     "video-react": "^0.16.0",
+    "video.js": "^8.23.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
