--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -51,7 +51,7 @@ jobs:
             # Install CDK dependencies
             - name: Install CDK Dependencies
               run: |
-                  npm ci
+                  npm install
 
             # Install Frontend Dependencies
             - name: Install Frontend Dependencies
