fix : install  ajv@^8.0.0 version separately

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -3,7 +3,7 @@ name: Deploy study-notion Frontend (Dev Env)
 on:
     push:
         branches:
-            - main
+            - deployment
 
 concurrency:
     group: frontend-dev-${{ github.ref }}
@@ -57,8 +57,9 @@ jobs:
             - name: Install Frontend Dependencies
               run: |
                   cd lib/frontend
-                  rm -rf node_modules package-lock.json
-                  npm install --legacy-peer-deps
+                  rm -rf node_modules
+                  npm install --legacy-peer-deps --no-audit
+                  npm install ajv@^8.0.0 --legacy-peer-deps --no-save || true
                   cd ../../
 
             # Configure AWS credentials for CDK
